--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
         <title>Super Lunam Login</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="/images/favicon.png">
-        <script src="script.js" type="text/javascript"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/three@0.147/build/three.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/uevent@2/browser.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@4/dist/photo-sphere-viewer.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@4/dist/photo-sphere-viewer.min.css"/>
+
+        <script src="script.js" type="text/javascript"></script>       
+        
     </head>
 
     <body>
         <div class="contents">
             <div class="geoguessr">
-                <h1>Here will go the 360 degree image</h1>
+                <div id="viewer" class="geoguessr"></div>
             </div>
         </div>
 
@@ -21,9 +28,9 @@
                 <div class="logo">
                     <img src="/images/logo-big.png">
                 </div>
-                <input type="text", id="user", placeholder="Enter username...">
+                <input type="text" id="user" placeholder="Enter username...">
                 <br>
-                <input type="text", id="pass", placeholder="Enter password...">
+                <input type="password" id="pass" placeholder="Enter password...">
                 <p id="invalid" class="hidden">Invalid username / password combination. Try again!</p>
             </div>
         </div>
